--- a/Data.vcxproj
+++ b/Data.vcxproj
@@ -143,6 +143,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Graph\Traversal\DFS\adjList.c" />
+    <ClCompile Include="Graph\Traversal\DFS\dfs.c" />
     <ClCompile Include="Graph\Traversal\DFS\ex8_3.c" />
     <ClCompile Include="Graph\Traversal\DFS\stackL.c" />
     <ClCompile Include="Linkedlist\ex4_5.c">
@@ -166,6 +167,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="Graph\Traversal\DFS\adjList.h" />
+    <ClInclude Include="Graph\Traversal\DFS\dfs.h" />
     <ClInclude Include="Graph\Traversal\DFS\stackL.h" />
     <ClInclude Include="Linkedlist\InsertLinkedList.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
